Add datatable to index

--- a/form_basics.html
+++ b/form_basics.html
@@ -9,9 +9,9 @@
   <meta name="author" content="">
   <link href="img/logo/logo.png" rel="icon">
   <title>RuangAdmin - Form Basics</title>
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="css/ruang-admin.min.css" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
+  <link href="css/admin.bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/admin.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -661,7 +661,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="js/ruang-admin.min.js"></script>
+  <script src="js/admin.js"></script>
 
 </body>
 
