--- a/form_advanceds.html
+++ b/form_advanceds.html
@@ -9,8 +9,8 @@
   <meta name="author" content="">
   <link href="img/logo/logo.png" rel="icon">
   <title>RuangAdmin - Form Advanceds</title>
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
+  <link href="css/admin.bootstrap.css" rel="stylesheet" type="text/css">
   <!-- Select2 -->
   <link href="vendor/select2/dist/css/select2.min.css" rel="stylesheet" type="text/css">
   <!-- Bootstrap DatePicker -->  
@@ -20,7 +20,7 @@
   <!-- ClockPicker -->
   <link href="vendor/clock-picker/clockpicker.css" rel="stylesheet">
   <!-- RuangAdmin CSS -->
-  <link href="css/ruang-admin.min.css" rel="stylesheet">
+  <link href="css/admin.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -624,7 +624,7 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/jquery/jquery.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <!-- Select2 -->
@@ -636,7 +636,7 @@
   <!-- ClockPicker -->
   <script src="vendor/clock-picker/clockpicker.js"></script>
   <!-- RuangAdmin Javascript -->
-  <script src="js/ruang-admin.min.js"></script>
+  <script src="js/admin.js"></script>
   <!-- Javascript for this page -->
   <script>
     $(document).ready(function () {
